--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+		<link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet" />
 		<script
 			src="https://kit.fontawesome.com/2f95a4ebb8.js"
 			crossorigin="anonymous"
